# gassmann

./: CMakeLists.txt
scripts/: Gassmann_by_D_Kumar.m  gassmann.m  plot_gassmann_phi.m  plot_gassmann_sat.m
src/: gassmann.cpp  gassmann.hpp  main.cpp  seismic.cpp  seismic.hpp  utilities.cpp  utilities.hpp
